--- a/css/friend.css
+++ b/css/friend.css
@@ -45,3 +45,18 @@
 .friend .chat__timestamp {
   font-size: 12px;
 }
+
+.friend .friend__now-listening {
+  padding: 5px 10px;
+  border-radius: 30px;
+  border: 2px solid #52e084;
+  font-size: 14px;
+}
+
+.friend__now-listening span {
+  opacity: 0.7;
+}
+
+.friend__now-listening i {
+  font-size: 12px;
+}
