--- a/css/chat.css
+++ b/css/chat.css
@@ -36,6 +36,15 @@
   width: 100%;
 }
 
+.chats {
+  padding: 10px 0px;
+  padding-top: 110px;
+}
+
+.chats__list .talk-list {
+  margin-bottom: 20px;
+}
+
 .chat__icon-left {
   position: absolute;
   left: 10px;
@@ -65,6 +74,8 @@
 }
 
 .chat__write {
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0 auto;
   bottom: 0px;
   width: 100%;
@@ -116,14 +127,15 @@
 
 .chat__messages .chat__timestamp {
   background-color: white;
-  font-size: 20px;
+  font-size: 15px;
   padding: 5px 10px;
   border-radius: 10px;
   margin-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   text-transform: uppercase;
-  font-family: "Lobster", cursive;
+  font-family: "Playball", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .message {
@@ -169,6 +181,8 @@
   border-radius: 20px;
   color: rgb(64, 65, 64);
   font-weight: 600;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .incoming-message .message__author {
