--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
   color: white;
   font-size: 28px;
   padding: 0px 20px;
@@ -16,6 +15,8 @@
   line-height: 1.5;
   display: none;
   z-index: 4;
+  font-family: "Permanent Marker", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @media screen and (min-width: 600px) {
