--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Permanent+Marker|Playball|Quicksand:600,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family==Oleo+Script:400,700|Open+Sans:300,400,600,700|Permanent+Marker|Playball|Quicksand:600,700&display=swap");
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
@@ -10,6 +10,7 @@
 @import "settings.css";
 @import "chat.css";
 @import "mobile.css";
+@import "profile.css";
 
 * {
   box-sizing: border-box;
